feat: 完成 EVE 军团租户授权与权限管理
  支持国服授权、角色身份识别、权限刷新、成员角色管理及本地登录验证。